--- a/static/currentChampions.html
+++ b/static/currentChampions.html
@@ -10,6 +10,104 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    
+
+    <h2 class="text-center">CURRENT AFC CHAMPIONS</h2>
+
+    <div class="container">
+        <div class="row">
+          <div class="col-9">DANIEL CORMIER</div>
+          <div class="col-4"><img src="../fighters/heavyweight/heavyweight2.png" width="120" height="200"></div>
+          <div class="col-6">AFC World Heavyweight Champion<img src="../images/heavyweightTitle.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">JON JONES</div>
+            <div class="col-4"><img src="../fighters/light-heavyweight/lightheavy1.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Light Heavyweight Champion<img src="../images/lightHeavyTitle.png" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">LUKE ROCKHOLD</div>
+            <div class="col-4"><img src="../fighters/middleweight/middleweight2.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Middleweight Champion<img src="../images/middleweightTitle.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">KAMARU USMAN</div>
+            <div class="col-4"><img src="../fighters/welterweight/welterweight4.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Welterweight Champion<img src="../images/welterweightTitle.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">KHABIB NURMAGOMEDOV</div>
+            <div class="col-4"><img src="../fighters/lightweight/lightweight3.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Lightweight Champion<img src="../images/lightweightTitle.gif" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">MAX HOLLOWAY</div>
+            <div class="col-4"><img src="../fighters/featherweight/featherweight1.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Featherweight Champion<img src="../images/featherweight.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">CODY GARBRANDT</div>
+            <div class="col-4"><img src="../fighters/bantamweight/bantamweight1.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Bantamweight Champion<img src="../images/bantamweightTitle.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">DEMETRIOUS JOHNSON</div>
+            <div class="col-4"><img src="../fighters/flyweight/flyweight2.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Flyweight Champion<img src="../images/flyweightTitle.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">AMANDA NUNES</div>
+            <div class="col-4"><img src="../fighters/womans-bantamweight/wb2.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Woman's Bantamweight Champion<img src="../images/wbTitle.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">PAGE VANZANT</div>
+            <div class="col-4"><img src="../fighters/womans-flyweight/wf2.png" width="120" height="200"></div>
+            <div class="col-6">AFC World Woman's Flyweight Champion<img src="../images/wfTitle.jpg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-9">ROSE NAMAJUNAS</div>
+            <div class="col-4"><img src="../fighters/womans-strawweight/ws2.jpg" width="120" height="200"></div>
+            <div class="col-6">AFC World Woman's Strawweight Champion<img src="../images/wsTitle.jpeg" width="100" height="100"></div>
+        </div>
+    </div>
+
+    <style>
+        .container {
+            padding: 25px;
+        }
+        
+    </style>
+
+
 </body>
 </html>
